--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,22 @@ video{
 	min-height: 330px;
 
 }
+.about_us_bg_first{
+    background-image: url("../images/c14.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	height: 450px;
+	min-height: 330px; 
+}
+.about_us_bg{
+    background-image: url("../images/c1.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	height: 450px;
+	min-height: 330px;
+}
 .newletter_form{
     padding-top: 8rem;
 }
@@ -143,4 +159,33 @@ video{
     font-size: 20px;
     background-color:   #b5651d;
     color: #fff;
+}
+.about_us_text{
+    font-size: 28px;
+    /* line-height: 40px; */
+    letter-spacing: .1px;
+}
+.collection{
+	background-image: url("../images/c5.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	height: 450px;
+	padding: 13% 6%;
+	color: #eee;
+}
+.client-info{
+    color:  #b5651d;
+    font-size: 23px;
+    font-weight: bold;
+    margin-bottom: 10px;
+
+}
+
+.client-info-two{
+    font-size: 23px!important; 
+}
+.testimonals{
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
